--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body{
     width: 100%;
     height: auto;
-    background: #F5F5F5;
+    background: #FFFFFF;
 }
 
 header{
@@ -28,9 +28,9 @@ nav,.user,.bag{
     margin-right: 2.8rem;
 }
 
-hr{
-    height: 1.5px;
-    background: #F3F3F3;
+.header-line{
+    margin-top: 2.9rem;
+    border: 1px solid #ECE4DE;
 }
 
 main{
@@ -94,4 +94,60 @@ main img{
     color: #AFADB5;
     margin-top: 1.6rem;
     max-width: 32.7rem;
+}
+
+.sec-one-cards{
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    gap: 2rem;
+}
+
+.sec-one-items{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sec-one-items h3{
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 130%;
+    color: #151411;
+    margin-top: 1.7rem;
+}
+
+.sec-one-items p{
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 180%;
+    color: #AFADB5;
+    margin-top: 7px;
+    max-width: 29.5rem;
+}
+
+.section-two{
+    display: flex;
+    flex-direction: column;    
+    gap: 2rem;
+    width: 87%;
+    margin: 0  auto;
+    margin-top: 1.5rem;
+}
+
+.footer-line{
+    margin: 0 auto;
+    margin-top: 4.8rem;
+    border: 1px solid #ECE4DE;
+    width: 87%;    
+}
+
+footer p{
+    width: 87%;
+    margin: 0  auto;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 180%;
+    color: #AFADB5;
+    margin-bottom: 2.2rem;
 }
