--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a{
 body{
     width: 100%;
     height: auto;
-    background: #FFFFFF;
+    background: #F5F5F5;
 }
 
 header{
@@ -51,7 +51,7 @@ main h1{
     line-height: 130%;
     text-align: center;
     color: #151411;
-    width: 28rem;
+    max-width: 28rem;
 }
 
 main p{
@@ -60,7 +60,7 @@ main p{
     line-height: 180%;
     text-align: center;
     color: #AFADB5;
-    width: 33rem;
+    max-width: 33rem;
     margin-top: 2rem;
 }
 
@@ -115,6 +115,19 @@ main p{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 100px rgba(175, 173, 181, 0.1);
+}
+
+.sec-one-items div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6.4rem;
+    height: 6.4rem;
+    border-radius: 50%;
+    background: #F9F9F9;
+    margin-top: 0.5rem;
 }
 
 .sec-one-items h3{
@@ -122,7 +135,7 @@ main p{
     font-size: 1.6rem;
     line-height: 130%;
     color: #151411;
-    margin-top: 1.7rem;
+    margin-top: 1.7rem;    
 }
 
 .sec-one-items p{
@@ -132,6 +145,7 @@ main p{
     color: #AFADB5;
     margin-top: 7px;
     max-width: 29.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .section-two{
@@ -209,6 +223,110 @@ footer p{
 
     .tesla-big{
         display: block;
+    }
+
+    main{
+        margin-top: 10rem;
+    }
+
+    main h1{
+        font-weight: 700;
+        font-size: 6.4rem;
+        line-height: 130%;
+        max-width: 68.3rem;
+    }
+
+    main p{
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 180%;
+        margin-top: 3rem;
+        max-width: 79.6rem;
+    }
+
+    .tesla-big{
+        margin-top: 6.3rem;
+    }
+
+    .section-one{
+        margin-top: 4.5rem;
+    }
+
+    .sec-one span{
+        font-size: 1.8rem;
+    }
+
+    .sec-one-info{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .sec-one-info h2{
+        font-size: 4.4rem;
+        line-height: 130%;
+        max-width: 45.4rem;
+        margin-top: 1.4rem;
+    }
+
+    .sec-one-info p{
+        max-width: 50.5rem;
+        font-size: 1.8rem;
+        line-height: 180%;
+    }
+
+    .sec-one-cards{
+        margin-top: 5rem;
+        gap: 3rem;
+    }
+
+    .sec-one-items{
+        align-items: flex-start;
+        
+    }
+
+    .sec-one-items div{
+        margin-left: 2.4rem;
+        margin-top: 2.6rem;
+    }
+
+    .sec-one-items h3{
+        font-size: 24px;
+        margin-top: 4rem;
+        margin-left: 2.4rem;
+    }
+
+    .sec-one-items p{
+        font-size: 1.8rem;
+        line-height: 180%;
+        margin-top: 2rem;
+        max-width: 34.6rem;
+        margin-left: 2.4rem;
+        margin-right: 2.4rem;
+        margin-bottom: 1.8rem;
+    }
+
+    .section-two{
+        margin-top: 9.3rem;
+        background: #D9D9D9;
+        padding: 2rem 2.4rem;
+        gap: 5rem;
+    }
+
+    footer{
+        width: 87%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 7.5rem;
+        margin-bottom: 10rem;
+    }
+
+    footer p{
+        max-width: 50.5rem;
+        margin: 0;
+        font-size: 1.8rem;
+        line-height: 180%;
     }
 
     
