--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@ main p{
 .section-one{
     width: 87%;
     margin: 0  auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sec-one span{
@@ -251,6 +254,7 @@ footer p{
     .section-one{
         margin-top: 4.5rem;
     }
+   
 
     .sec-one span{
         font-size: 1.8rem;
