--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ nav a:hover{
   }
 
   .dropbtn::before{
-    content: url('./src/arrowDown.png');
+    content: url('./src/arrowDown.svg');
     position: absolute;
     left: 110%;
-    bottom: 0;  
+    bottom: -2px;  
   }
 
   .dropdown {
