--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav a:hover{
     content: url('./src/arrowDown.svg');
     position: absolute;
     left: 110%;
-    bottom: -2px;  
+    bottom: -2px;
   }
 
   .dropdown {
@@ -279,6 +279,7 @@ menu{
     z-index: 999;
     background-color: white;
     opacity: 0.9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .menu-close{
