--- a/css/gallery.css
+++ b/css/gallery.css
@@ -26,12 +26,15 @@ body{
     margin: 0 auto;
     padding: 0.2vw;
     padding: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .teammembers{
     width: 100%;
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
@@ -43,8 +46,10 @@ body{
     background-color: white;
     padding: 16px;
     border-radius: 5px;
+    
 }
 
 .member img{
     object-fit: cover;
+    cursor: pointer;
 }
