--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,16 +9,19 @@
     list-style: none;
 }
 
-a{
-    display: block;
-}
-
 body{
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+}
+
+.logo{
+    position: absolute;
+    top: 20px;
+    left: 40px;
 }
 
 .container{
