--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     font-family: 'Poppins';
     text-decoration: none;
     list-style: none;
+    font-size: 62.5%;
 }
 
 a{
@@ -39,12 +40,12 @@ header{
 
 nav{
     display: flex;
-    gap: 60px;
+    gap: 6rem;
 }
 
 nav a{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 180%;
     color: #151411;
 }
@@ -56,7 +57,7 @@ nav a:hover{
 .dropbtn {
     background-color: transparent;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 180%;
     color: #151411;
     border: none;
@@ -82,7 +83,7 @@ nav a:hover{
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 16rem;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
@@ -90,7 +91,7 @@ nav a:hover{
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 1.2rem 1.6rem;
     text-decoration: none;
     display: block;
   }
@@ -106,7 +107,7 @@ nav a:hover{
 
 .icons{
     display: flex;
-    gap: 32px;
+    gap: 3.2rem;
 }
 
 .icons img{
@@ -115,14 +116,15 @@ nav a:hover{
 
 #menuBtn button{
     background-color: rgba(0,0,0,.05);
-    padding: 8px 25px;
+    padding: 0.8rem 2.5rem;
     cursor: pointer;
     border: none;
+    font-size: 1.4rem;
 }
 
 #menuBtn:hover{
     animation: pulse 1s;
-    box-shadow: 0 0 0 2em transparent;
+    box-shadow: 0 0 0 2rem transparent;
   }
   
   @keyframes pulse {
@@ -136,12 +138,12 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 10rem;
 }
 
 .main-heading h1{
     font-weight: 700;
-    font-size: 64px;
+    font-size: 6.4rem;
     line-height: 130%;
     text-align: center;
     color: #151411;
@@ -149,21 +151,21 @@ main{
 
 .main-heading p{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 180%;
     text-align: center;
     color: #AFADB5;
-    max-width: 800px;
-    margin-top: 30px;
+    max-width: 80rem;
+    margin-top: 3rem;
 }
 
 .slider{
-    margin-top: 63px;
+    margin-top: 6.3rem;
 }
 
 
 .slider img{
-    border-radius: 25px;
+    border-radius: 2.5rem;
 }
 
 
@@ -177,20 +179,20 @@ main{
 .slider{
     position: relative;
     width: 70%;
-    height: 600px;
+    height: 60rem;
     /* margin: 0 auto; */
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 2rem;
    
 }
 
 .slider img{
-    margin-top: 50px;
+    margin-top: 5rem;
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0;    
-    border-radius: 20px;
+    border-radius: 2rem;
     transition: opacity 1s;
     object-fit: cover;
 }
@@ -201,20 +203,20 @@ main{
 
 
 .carousel{
-    margin-top: 50px;
+    margin-top: 5rem;
     width: 80%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 1rem;
     /* outline: solid red; */
 }
 
   .item-class{    
-    margin: 20px 10px;
-    border-radius: 15px;
+    margin: 2rem 1rem;
+    border-radius: 1.5rem;
     position: relative;
-    width: 394px;
-    height: 350px;
-    padding: 30px;
+    width: 39.4rem;
+    height: 35rem;
+    padding: 3rem;
     background: #FFFFFF;
     box-shadow: 0px 4px 100px rgba(175, 173, 181, 0.1);    
   }
@@ -222,17 +224,22 @@ main{
   .item-class h2,
   .item-class p,
   .item-class a{
-    margin-top: 10px;
+    margin-top: 1rem;
+  }
+
+  .item-class h2{
+    font-size: 2.4rem;
   }
  
 .item-class p{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 180%;
     color: #AFADB5;
 }
 
 .item-class a{
+    font-size: 1.6rem;
     font-weight: 900;
     color: #5c5e62;;
     cursor: pointer;
@@ -244,37 +251,37 @@ main{
 
 footer{
     position: relative;
-    margin-top: 75px;
+    margin-top: 7.5rem;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    padding: 40px 20px;
+    padding: 4rem 2rem;
     border-top: solid 1px #F3F3F3;
 }
 
 .footer-logo{
     position: absolute;
     top: 0;
-    left: 44px;
+    left: 4.4rem;
 }
 
 .copyright{
     display: flex;
-    gap: 30px;
+    gap: 3rem;
 }
 
 .copyright a{
     color: #5c5e62;
-    font-size: 12px;
+    font-size: 1.2rem;
 }
 
 menu{
     position: fixed;
     top: 0;
     right: 0;
-    width: 294px;
+    width: 29.4rem;
     height: auto;
-    padding: 24px;
+    padding: 2.4rem;
     transform: translateX(100%);
     transition: transform 1s ease-in-out;
     z-index: 999;
@@ -285,10 +292,10 @@ menu{
 
 .menu-close{
     position: absolute;
-    width: 24px;
-    height: 24px;
-    top: 24px;
-    right: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
+    top: 2.4rem;
+    right: 2.4rem;
     cursor: pointer;
 }
 
@@ -297,29 +304,31 @@ menu{
 }
 
 menu ul{
-    margin-top: 48px;
+    margin-top: 4.8rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 2rem;
 }
 
 menu a{
     color: #151411;
+    font-size: 1.6rem;
 }
 
 menu select{
-    width: 240px;
-    height: 56px;
-    margin-top: 20px;
+    width: 24rem;
+    height: 5.6rem;
+    margin-top: 2rem;
 
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e"), url('../src/globe.svg');
     appearance: none;
     background-repeat: no-repeat, no-repeat;
-    background-position: right 1rem center, left 2.5rem center;
+    background-position: right 1rem center, left 4.5rem center;
     background-size: 1em, 1.5rem;
     cursor: pointer;
     border: none;
     outline: none;
+    font-size: 1.4rem;
 }
 
 menu select:hover{
@@ -328,7 +337,8 @@ menu select:hover{
 
 menu option{
     text-align: center;
-    padding: 10px;
+    padding: 1rem;
+    font-size: 1.4rem;      
 }
 .active{
     transform: translateX(0%);
@@ -337,7 +347,7 @@ menu option{
 
 .video{
     width: auto;
-    margin-top: 50px;
+    margin-top: 5rem;
     position: relative;
 }
 
@@ -354,30 +364,31 @@ menu option{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .video-info h2{
-    margin-top: 50px;
+    margin-top: 5rem;
     color: white;
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: 900;
 }
 
 .video-info p{
     color: white;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 900;
 }
 
 .video-info a{
-    margin-top: 330px;
+    margin-top: 33rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 264px;
-    height: 50px;
+    width: 26.4rem;
+    height: 5rem;
     color: white;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 900;    
     border: solid 3px white;
 }
@@ -415,4 +426,16 @@ menu option{
 
 /* ----------------------------- */
 
+@media screen and (max-width: 1300px){
+    *{
+        font-size: 40%;
+    }
+    
+}
 
+@media screen and (max-width: 970px){
+    *{
+        font-size: 30%;
+    }
+    
+}
