--- a/css/default.css
+++ b/css/default.css
@@ -27,3 +27,10 @@ h1{
     color: aliceblue;
     transform: translateX(-50%);
 }
+
+a img{
+    
+    position: absolute;
+    top: 20px;
+    left: 40px;
+}
