--- a/css/models.css
+++ b/css/models.css
@@ -56,8 +56,8 @@ body{
     z-index: 999;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: auto;
     background-color: rgba(0,0,0, 0.4);
 }
