--- a/css/style.css
+++ b/css/style.css
@@ -359,12 +359,12 @@ menu option{
 .video-info{
     position: absolute;
     top: 0;
-    left: calc(50% - 165px);
+    left: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    transform: translateX(-50%);
 }
 
 .video-info h2{
