--- a/css/product.css
+++ b/css/product.css
@@ -82,10 +82,11 @@ h1{
 .close{
     position: absolute;
     top: 100px;
-    right: 100px;
+    right: 100px;   
     font-size: 60px;
     z-index: 999;
     cursor: pointer;
+    color: #ed4e3b;
 }
 
 .prev-btn,
@@ -94,7 +95,7 @@ h1{
     top: 50%;
     transform: translateY(-50%);
     font-size: 4rem;
-    color: black;
+    color: #ed4e3b;
     border-radius: 5px;
     cursor: pointer;
     background-color: transparent;
