--- a/css/product.css
+++ b/css/product.css
@@ -9,6 +9,13 @@
     list-style: none;
 }
 
+body{
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+
+
 .header a{
     display: block;
     margin: 20px 40px;
