--- a/css/contact.css
+++ b/css/contact.css
@@ -63,3 +63,16 @@ iframe {
     border-radius: 25px;
     
 }
+
+h5{
+    font-weight: 900;
+}
+
+.adreses p{
+    color: #5c5e62;
+    margin-left: 20px;
+}
+
+.adreses a{
+    margin-left: 20px;
+}
