--- a/css/signin.css
+++ b/css/signin.css
@@ -74,10 +74,13 @@ form input{
     border: none;
     border-radius: 4px;
     padding: 10px;
+    padding-right: 35px
 }
 
 .bi{
-    margin-left: 10px;
+    position: relative;
+    top: 4px;
+    left: -35px;
     cursor: pointer;
     font-size: 20px;
 }
