--- a/css/signin.css
+++ b/css/signin.css
@@ -74,7 +74,7 @@ form input{
     border: none;
     border-radius: 4px;
     padding: 10px;
-    padding-right: 35px
+    padding-right: 35px;
 }
 
 .bi{
