--- a/css/services.css
+++ b/css/services.css
@@ -110,6 +110,7 @@ footer{
 #bitcoin:hover,
 #paypal:hover{
     fill: #675da9;
-    filter: drop-shadow(1px 1px 1px #675da9);    
+    filter: drop-shadow(1px 1px 1px #675da9);
+    transition: all 0.3s ease;    
 }
 
