--- a/css/services.css
+++ b/css/services.css
@@ -122,3 +122,12 @@ footer{
     transition: all 0.3s ease;    
 }
 
+.jumbotron{
+    background-image: url(../src/cyberwt.avif) ,url(../src/cyber1.jpg);
+    background-repeat: no-repeat, no-repeat;
+    background-size: 300px 100px, cover;
+    background-position: top 90% left 50%;
+    height: 900px;
+}
+
+
