--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -60,3 +60,13 @@ footer{
     transition: box-shadow 0.8s ease;
     cursor: pointer;
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    display: none;
+  }
+
+ 
+
