--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -73,3 +73,39 @@ footer{
   .bi-star{
     cursor: pointer;
   }
+
+
+  .flip-card{
+    width: 377px;
+    height: 518px;
+    margin: 0 auto;
+}
+
+.flip-card-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card-front, 
+.flip-card-back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+
+
+.flip-card-back{
+    
+    transform: rotateY(180deg);
+}
+
+.flipped .flip-card-inner{
+    transform: rotateY(180deg);
+}
